# threat-intel-summarizer

./: .gitignore  LICENSE  README.md  SECURITY_AUDIT.md  com.pubal.threat-brief.plist  com.threat-brief.plist.example  config.yaml  config.yaml.example  pyproject.toml  requirements.txt
threat_brief/: cli.py  delta.py  html_template.py  models.py  summarizer.py
threat_brief/notifications/: slack.py
threat_brief/sources/: __init__.py  apple_security.py  aws_bulletins.py  cisa_all.py  cisa_kev.py  github_advisories.py  hackernews.py  isc.py  krebs.py  mandiant.py  msrc.py  registry.py
